bpo-32703: Fix coroutine resource warning in case where there's an error